# rust-snake

./: Cargo.toml
src/: game_state.rs  game_window.rs  main.rs  main_menu.rs  renderer.rs  resources.rs  sdl_game_window.rs  snake_game.rs
