[package]
name = "snake"
version = "0.1.0"
authors = ["Axel Wettervik <axel.wettervik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.7"
rand = "*"

[dependencies.sdl2]
version = "0.34.2"
default-features = false
features = ["image"]
